# MCP-server-course-material

./: Personal-Knowledge-Bank-MCP-Course-Reader.docx
2. rabobank_design_system_mockup_mcp_server/: .gitignore  README.md  calculator.html  index.html  main.py  pyproject.toml
2. rabobank_design_system_mockup_mcp_server/.github/: copilot-instructions.md
2. rabobank_design_system_mockup_mcp_server/.github/agents/: rabobank-mcp-server-expert.agent.md
2. rabobank_design_system_mockup_mcp_server/labs/: demo-lab.html  task-1-development-standards-resource.md
2. rabobank_design_system_mockup_mcp_server/resources/: accessibility-focus-and-feedback.md  accessibility-forms-and-actions.md  accessibility-inclusive-layouts.md  accessibility-keyboard-navigation.md  accessibility-readable-content.md
3. personal-knowledge-bank-mcp/: README.md  pyproject.toml  server.py  test_server.py
3. personal-knowledge-bank-mcp/.github/: copilot-instructions.md
3. personal-knowledge-bank-mcp/developer-knowledge-bank/: HOW_TO_USE.md  README.md  inbox.md  index.md  log.md
3. personal-knowledge-bank-mcp/developer-knowledge-bank/agents/: assistant-instructions.md  index.md  standup-helper-prompt.md
3. personal-knowledge-bank-mcp/developer-knowledge-bank/decisions/: career-decisions.md  index.md  technical-decisions.md
3. personal-knowledge-bank-mcp/developer-knowledge-bank/goals/: career-growth.md  health-and-energy.md  index.md  skills-development.md  work-life-balance.md
3. personal-knowledge-bank-mcp/developer-knowledge-bank/learning/: backend-development.md  cloud-and-azure.md  (+3 more)
(+36 files in other folders)
