[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "design-styling-mcp"
version = "0.1.0"
description = "MCP server that returns UI components as HTML, CSS, and JavaScript bundles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
design-mcp = "main:main"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]