[project]
name = "personal-knowledge-bank-mcp"
version = "0.1.0"
description = "An MCP server that exposes a personal Markdown knowledge bank to an AI assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4,<4",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
